--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
         tools:ignore="ScopedStorage" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_mtn_logo_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_mtn_logo_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MomoGrow"
-        android:name=".MyApplication">
+        android:theme="@style/Theme.MomoGrow">
+        <activity
+            android:name=".views.login.PendigApprovalActivity"
+            android:exported="true" />
         <activity
             android:name=".views.catalog.ProductDetailsActivity"
             android:exported="true" />
@@ -74,9 +77,7 @@
 
         <activity
             android:name=".views.home.HomeActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".views.register.RegisterActivity"
             android:exported="true" />
