--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MomoGrow">
         <activity
+            android:name=".views.login.AuthenticateFrgotPasswordActivity"
+            android:exported="true" />
+        <activity
             android:name=".views.login.PendigApprovalActivity"
             android:exported="true" />
         <activity
-            android:name=".views.catalog.ProductDetailsActivity"
+            android:name=".views.products.ProductDetailsActivity"
             android:exported="true" />
         <activity
             android:name=".views.home.PaylinkDetailsActivity"
@@ -53,7 +56,7 @@
             android:name=".views.orders.OrderDetailsActivity"
             android:exported="true" />
         <activity
-            android:name=".views.catalog.AddProductActivity"
+            android:name=".views.products.AddProductActivity"
             android:exported="true" />
         <activity
             android:name=".views.notifications.NotificationsActivity"
@@ -84,7 +87,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".views.register.RegisterActivity"
