--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
+    //QR Generator
+    implementation 'com.google.zxing:core:3.3.3'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
